# common-stacks

./: .env.example  .gitignore  LICENSE  README.md  index.html  landing.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
dist-landing/: index.html  landing.html
dist-landing/assets/: landing-BBzCcqb5.js  landing-BggqGVwo.css  landing-BwGu6lly.js  landing-CCy_drKA.css  landing-CVUW9OEr.css  landing-c5urEEAO.js  landing-e1DlJ9RC.js
docs/: MOBILE_PLAN.md  PLUGIN_DEVELOPMENT.md  PRD.md
examples/plugins/example-metadata/: Cargo.toml  README.md  manifest.json  plugin.py
examples/plugins/example-metadata/src/: lib.rs
scripts/: build-macos.sh  build-windows.ps1  bump-version.sh  release-android.sh  release.sh  snapshot-landing.ts  upload-to-cloudflare.ps1  upload-to-cloudflare.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dedup.rs  downloads.rs  epub.rs  lib.rs  main.rs  state.rs  tls.rs
src-tauri/src/opds/: auth.rs  feed.rs  mod.rs  parse_v1.rs  parse_v2.rs
src-tauri/src/plugins/: loader.rs  mod.rs
src-tauri/src/plugins/metadata/: openlibrary.rs
src-tauri/src/plugins/send/: crosspoint.rs  kindle_cloudflare.rs  kindle_email.rs  mod.rs  webdav.rs
src-tauri/src/plugins/transform/: epub_optimizer.rs  mod.rs
src/components/: CategoryTile.tsx  CoverCard.tsx  DefaultCover.tsx  EmptyState.tsx  ErrorBoundary.tsx  FormatFilter.tsx  MobileHeader.tsx  MobileTabBar.tsx  Rail.tsx  SendProgressModal.tsx  Sidebar.tsx  UpdateChecker.tsx  ViewToggle.tsx
src/landing/: Landing.tsx  data.ts  main.tsx
src/landing/data/: snapshot.json
src/lib/: api.ts  enrichment.ts  entry.ts  format.ts  formatFilter.ts  haptics.ts  mobileSearch.tsx  platform.ts  pullToRefresh.tsx  updateStore.ts
src/routes/: Book.tsx  Browse.tsx  Downloads.tsx  Library.tsx  Search.tsx  Settings.tsx
workers/kindle/: README.md  package.json  wrangler.toml
workers/kindle/src/: index.ts
workers/landing/: wrangler.toml
workers/releases/: package.json  wrangler.toml
workers/releases/src/: index.ts
