[package]
name = "common-stacks"
version = "0.1.0"
description = "CommonStacks — a local-first OPDS storefront"
authors = ["Justin Mitchell"]
edition = "2021"

[lib]
name = "common_stacks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream", "gzip", "brotli"] }
url = "2.5"
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
sanitize-filename = "0.6"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
base64 = "0.22"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
