[package]
name = "common-stacks"
version = "0.1.0"
description = "CommonStacks — a local-first OPDS storefront"
authors = ["Justin Mitchell"]
edition = "2021"

[lib]
name = "common_stacks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "CommonStacks"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-updater = "2.9"
tauri-plugin-process = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream", "gzip", "brotli", "multipart"] }
url = "2.5"
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
sanitize-filename = "0.6"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
base64 = "0.22"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
async-trait = "0.1"
libloading = "0.8"
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls", "ring", "rustls-native-certs", "smtp-transport", "tokio1-rustls", "hostname"] }
