[package]
name = "common-stacks"
version = "0.1.5"
description = "Common Stacks — a local-first OPDS storefront"
authors = ["Justin Mitchell"]
edition = "2021"

[lib]
name = "common_stacks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "common-stacks"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream", "gzip", "brotli", "multipart"] }
url = "2.5"
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
sanitize-filename = "0.6"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
base64 = "0.22"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls", "ring", "rustls-native-certs", "smtp-transport", "tokio1-rustls", "hostname"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-updater = "2.9"
tauri-plugin-process = "2.3"
reqwest = { version = "0.13", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.6"
jni = "0.21"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-root-certs = "1"
